# QObjectInNamespaces

./: CMakeLists.txt  README.md
source/CompA/: ClassA.cpp  ClassA.h
source/CompB/: ClassB.cpp  ClassB.h
source/CompC/: ClassC.cpp  ClassC.h
source/CompD/: ClassD.cpp  ClassD.h
source/Globals/: export_tpl.h
source/Programm/: Application.cpp  Application.h  main.cpp
